debug/qbittorrent-chart/templates/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    routed-gateway: "true"
